# Thales

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  RELEASE.md
benchmarking/: frame-weight-template.hbs
client/rpc-core/debug/: Cargo.toml
client/rpc-core/debug/src/: lib.rs
client/rpc-core/trace/: Cargo.toml
client/rpc-core/trace/src/: lib.rs
client/rpc-core/txpool/: Cargo.toml
client/rpc-core/txpool/src/: lib.rs
client/rpc-core/txpool/src/types/: content.rs  inspect.rs  mod.rs
client/rpc/debug/: Cargo.toml
client/rpc/debug/src/: lib.rs
client/rpc/trace/: Cargo.toml
client/rpc/trace/src/: lib.rs
client/rpc/txpool/: Cargo.toml
client/rpc/txpool/src/: lib.rs
node/: Cargo.toml  build.rs
node/src/: chain_spec.rs  cli.rs  command.rs  inherents.rs  main.rs  rpc.rs  service.rs  test_spec.rs
pallets/author-filter/: Cargo.toml
pallets/author-filter/src/: lib.rs
pallets/author-inherent/: Cargo.toml
pallets/author-inherent/src/: lib.rs
pallets/dpos/: Cargo.toml
pallets/dpos/src/: lib.rs
pallets/ethereum/: Cargo.toml
pallets/ethereum-chain-id/: Cargo.toml
pallets/ethereum-chain-id/src/: lib.rs
pallets/ethereum/src/: lib.rs  mock.rs  tests.rs
pallets/evm-accounts/: Cargo.toml
pallets/evm-accounts/src/: lib.rs  mock.rs  tests.rs  weights.rs
pallets/parachain-staking/: Cargo.toml
pallets/parachain-staking/src/: benchmarks.rs  inflation.rs  lib.rs  mock.rs  set.rs  tests.rs  weights.rs
pallets/template/: Cargo.toml
pallets/template/src/: lib.rs  mock.rs  tests.rs
pallets/token-dealer/src/: lib.rs
polkadot-js/: ext-types.json
primitives/: Cargo.toml
primitives/account/: Cargo.toml
primitives/account/src/: lib.rs
primitives/rpc/debug/: Cargo.toml
primitives/rpc/debug/src/: block.rs  lib.rs  serialization.rs  single.rs
primitives/rpc/txpool/: Cargo.toml
primitives/rpc/txpool/src/: lib.rs
primitives/src/: lib.rs
runtime/: Cargo.toml  build.rs
runtime/extensions/evm/: Cargo.toml
runtime/extensions/evm/src/: lib.rs
runtime/extensions/evm/src/executor/: mod.rs  util.rs  wrapper.rs
runtime/extensions/evm/src/runner/: mod.rs  stack.rs
runtime/precompiles/: Cargo.toml
runtime/precompiles/src/: lib.rs  staking.rs
runtime/src/: constants.rs  lib.rs  precompiles.rs
runtime/src/weights/: mod.rs
runtime/tests/: integration_test.rs
scripts/: README.md  _init_var.sh  build-alphanet-relay-image.sh  generate-parachain-specs.sh  generate-relay-specs.sh  init.sh  register-parachain-local.sh  register-parachain.sh  run-alphanet-parachain.sh  run-rococo-local.sh  run-thalesbase-dev.sh  run_benchmarks.sh
scripts/github/: generate_release_text.rb  thales_release.erb
specs/: README.md
specs/alphanet/: parachain-embedded-specs-v7.json  parachain-specs-template.json  rococo-embedded-specs-v7.json
specs/stagenet/: parachain-embedded-specs-v7.json  parachain-specs-template.json  rococo-embedded-specs-v7.json  rococo-specs-template.json
tests/: README.md  package.json
tests/tests/: test-balance-extrinsics.ts  test-balance-genesis.ts  test-balance-transfer.ts  test-block-1.ts  test-block-2.ts  test-block-gas.ts  test-block-genesis.ts  test-contract-creation.ts  test-contract-error.ts  test-contract-incr-loop.ts  test-contract-loop-cost.ts  test-contract-methods.ts  test-contract-variables.ts  test-deprecated.ts  test-ethers.ts  test-ethpool-multiple.ts  test-ethpool-nonce-future.ts  test-event.ts  test-existential-deposit.ts  test-filter-api-creation.ts  test-filter-api-pending.ts  test-filter-api-polling.ts  test-fork-chain.ts  test-gas-contract-creation.ts  test-gas-estimation.ts  test-nonce.ts  test-polkadot-api.ts  test-precompile-bn128add.ts  test-precompile-bn128mul.ts  test-precompile-bn128pairing.ts  test-precompile-modexp.ts  test-precompile-ripemd160.ts  test-precompile-sha3fips.ts  test-receipt-revert.ts  test-receipt.ts  test-rpc-constants.ts  test-stake.ts  test-subscription-logs.ts  test-subscription-past-events.ts  test-subscription.ts  (+8 more)
tests/util/: constants.ts  dev-node.ts  providers.ts  setup-dev-tests.ts
thales-types-bundle/: index.ts  package-lock.json  package.json
tools/: README.md  config_thales.json  config_thales_staking.json  package.json  test-alpha.ts  test-staking.ts  thales-launch.ts
tools/bots/: package.json
tools/load-testing/: load-gas-loop.ts
