[package]
name = "thales"
version = "0.1.0"
authors = ["Thales Substrate <thales.network>"]
edition = "2018"
license = "GPL-3.0-or-later"
build = "build.rs"
homepage = "https://thales.network"
repository = "https://github.com/thales-substrate/substrate"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
futures = "0.3.4"
log = "0.4.8"
structopt = "0.3.8"
jsonrpc-core = "15.0.0"
jsonrpc-pubsub = "15.0.0"
hex-literal = '0.3.1'

sp-api = { git = "https://github.com/paritytech/substrate.git", branch = "frontier" }
sp-blockchain = { git = "https://github.com/paritytech/substrate.git", branch = "frontier" }
sc-rpc-api = { git = "https://github.com/paritytech/substrate.git", branch = "frontier" }
sc-rpc = { git = "https://github.com/paritytech/substrate.git", branch = "frontier" }
substrate-frame-rpc-system = { git = "https://github.com/paritytech/substrate.git", branch = "frontier" }
pallet-transaction-payment-rpc = { git = "https://github.com/paritytech/substrate.git", branch = "frontier" }
sc-cli = { git = "https://github.com/paritytech/substrate.git", branch = "frontier" }
sp-core = { git = "https://github.com/paritytech/substrate.git", branch = "frontier" }
sc-executor = { git = "https://github.com/paritytech/substrate.git", branch = "frontier" }
sc-service = { git = "https://github.com/paritytech/substrate.git", branch = "frontier" }
sp-inherents = { git = "https://github.com/paritytech/substrate.git", branch = "frontier" }
sc-transaction-pool = { git = "https://github.com/paritytech/substrate.git", branch = "frontier" }
sp-transaction-pool = { git = "https://github.com/paritytech/substrate.git", branch = "frontier" }
sc-network = { git = "https://github.com/paritytech/substrate.git", branch = "frontier" }
sc-consensus-aura = { git = "https://github.com/paritytech/substrate.git", branch = "frontier" }
sp-consensus-aura = { git = "https://github.com/paritytech/substrate.git", branch = "frontier" }
sc-consensus-manual-seal = { git = "https://github.com/paritytech/substrate.git", branch = "frontier" }
sp-consensus = { git = "https://github.com/paritytech/substrate.git", branch = "frontier" }
sc-consensus = { git = "https://github.com/paritytech/substrate.git", branch = "frontier" }
sp-timestamp = { git = "https://github.com/paritytech/substrate.git", branch = "frontier" }
pallet-evm = { git = "https://github.com/paritytech/frontier", branch = "master" }
pallet-ethereum = { git = "https://github.com/paritytech/frontier", branch = "master" }
sc-finality-grandpa = { git = "https://github.com/paritytech/substrate.git", branch = "frontier" }
sp-finality-grandpa = { git = "https://github.com/paritytech/substrate.git", branch = "frontier" }
sc-client-api = { git = "https://github.com/paritytech/substrate.git", branch = "frontier" }
sp-runtime = { git = "https://github.com/paritytech/substrate.git", branch = "frontier" }
sc-basic-authorship = { git = "https://github.com/paritytech/substrate.git", branch = "frontier" }
sp-block-builder = { git = "https://github.com/paritytech/substrate.git", branch = "frontier" }
sc-telemetry = { git = "https://github.com/paritytech/substrate.git", branch = "frontier" }
sc-transaction-graph = { git = "https://github.com/paritytech/substrate.git", branch = "frontier" }
sc-finality-grandpa-warp-sync = { git = "https://github.com/paritytech/substrate.git", branch = "frontier" }


thales-runtime = { path = "../runtime", default-features = false, features = ["std"] }

fc-consensus = { git = "https://github.com/paritytech/frontier", branch = "master" }
fp-consensus = { git = "https://github.com/paritytech/frontier", branch = "master" }
fc-rpc = { git = "https://github.com/paritytech/frontier", branch = "master" }
fp-rpc = { git = "https://github.com/paritytech/frontier", branch = "master" }
fc-rpc-core = { git = "https://github.com/paritytech/frontier", branch = "master" }
fc-db = { git = "https://github.com/paritytech/frontier", branch = "master" }
fc-mapping-sync = { git = "https://github.com/paritytech/frontier", branch = "master" }

[build-dependencies]
substrate-build-script-utils = { git = "https://github.com/paritytech/substrate.git", branch = "frontier" }

[features]
default = ["aura"]
aura = ["thales-runtime/aura"]
manual-seal = ["thales-runtime/manual-seal"]
