[package]
name = "thales-primitives"
version = "0.1.0"
authors = ["Thales Substrate <thales.network>"]
edition = "2018"

[dependencies]
serde = { version = "1.0.119", optional = true }
codec = { package = "parity-scale-codec", version = "2.0.1", default-features = false }
sp-core = { git = "https://github.com/paritytech/substrate.git", branch = "frontier", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate.git", branch = "frontier", default-features = false }
sp-std = { git = "https://github.com/paritytech/substrate.git", branch = "frontier", default-features = false }

[dev-dependencies]
frame-support = { git = "https://github.com/paritytech/substrate.git", branch = "frontier" }

[features]
default = ["std"]
std = [
	"serde",
	"codec/std",
	"sp-runtime/std",
	"sp-core/std",
	"sp-std/std",
]
