[package]
name = "thales-runtime"
version = "0.1.0"
authors = ["Thales Substrate <thales.network>"]
edition = "2018"
license = "GPL-3.0-or-later"
homepage = "https://thales.network"
repository = "https://github.com/thales-substrate/thales"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"] }
serde = { version = "1.0.101", optional = true, features = ["derive"] }
static_assertions = "1.1.0"

# local dependencies
primitives = { package = "thales-primitives", path = "../primitives", default-features = false }
pallet-template = { path = "../pallets/template", default-features = false }
pallet-ethereum = { path = "../pallets/ethereum", default-features = false }
pallet-evm-accounts = { path = "../pallets/evm-accounts", default-features = false }

# Substrate dependencies
frame-executive = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "frontier" }
frame-support = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "frontier" }
frame-system = { default-features = false, package = "frame-system", git = "https://github.com/paritytech/substrate.git", branch = "frontier" }
frame-system-rpc-runtime-api = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "frontier" }

pallet-aura = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "frontier" }
pallet-balances = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "frontier" }
pallet-grandpa = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "frontier" }
pallet-randomness-collective-flip = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "frontier" }
pallet-sudo = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "frontier" }
pallet-timestamp = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "frontier" }
pallet-transaction-payment = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "frontier" }
pallet-transaction-payment-rpc-runtime-api = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "frontier" }
pallet-collective = { git = "https://github.com/paritytech/substrate", branch = "frontier", default-features = false }
pallet-elections-phragmen = { git = "https://github.com/paritytech/substrate", branch = "frontier", default-features = false }
pallet-membership = { git = "https://github.com/paritytech/substrate", branch = "frontier", default-features = false }
# pallet-democracy = { git = "https://github.com/paritytech/substrate", branch = "frontier", default-features = false }


sp-api = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "frontier" }
sp-block-builder = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "frontier" }
sp-consensus-aura = { version = "0.9.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "frontier" }
sp-core = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "frontier" }
sp-inherents = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "frontier" }
sp-io = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "frontier" }
sp-offchain = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "frontier" }
sp-runtime = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "frontier" }
sp-session = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "frontier" }
sp-std = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "frontier" }
sp-transaction-pool = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "frontier" }
sp-version = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "frontier" }

# frontier for ethereum dependencies
pallet-evm = { default-features = false, git = "https://github.com/paritytech/frontier", branch = "master" }
pallet-evm-precompile-simple = { default-features = false, git = "https://github.com/paritytech/frontier", branch = "master" }
pallet-evm-precompile-sha3fips = { default-features = false, git = "https://github.com/paritytech/frontier", branch = "master" }
pallet-evm-precompile-bn128 = { git = "https://github.com/paritytech/frontier", default-features = false, branch = "master" }
pallet-evm-precompile-dispatch = { git = "https://github.com/paritytech/frontier", default-features = false, branch = "master" }
pallet-evm-precompile-modexp = { git = "https://github.com/paritytech/frontier", default-features = false, branch = "master" }
fp-rpc = { default-features = false, git = "https://github.com/paritytech/frontier", branch = "master" }

[build-dependencies]
substrate-wasm-builder = { git = "https://github.com/paritytech/substrate.git", branch = "frontier" }

[features]
default = ["std", "aura"]
aura = []
manual-seal = []
std = [
	"codec/std",
	"serde",
	"frame-executive/std",
	"frame-support/std",
	"frame-system-rpc-runtime-api/std",
	"frame-system/std",
	"fp-rpc/std",
	"pallet-ethereum/std",
	"pallet-evm/std",
	"pallet-evm-precompile-simple/std",
	"pallet-evm-precompile-sha3fips/std",
	"pallet-evm-precompile-bn128/std",
	"pallet-evm-precompile-dispatch/std",
	"pallet-evm-precompile-modexp/std",
	"pallet-aura/std",
	"pallet-balances/std",
	"pallet-grandpa/std",
	"pallet-randomness-collective-flip/std",
	"pallet-sudo/std",
	"pallet-timestamp/std",
	"pallet-transaction-payment-rpc-runtime-api/std",
	"pallet-transaction-payment/std",
	"sp-api/std",
	"sp-block-builder/std",
	"sp-consensus-aura/std",
	"sp-core/std",
	"sp-inherents/std",
	"sp-io/std",
	"sp-offchain/std",
	"sp-runtime/std",
	"sp-session/std",
	"sp-std/std",
	"sp-transaction-pool/std",
	"sp-version/std",
	"primitives/std",
	"pallet-template/std",
	"pallet-evm-accounts/std",
	"pallet-collective/std",
	"pallet-elections-phragmen/std",
	"pallet-membership/std",
]
