[package]
name = "pallet-ethereum"
version = "0.1.0"
authors = ["Thales Substrate <thales.network>"]
edition = "2018"
license = "GPL-3.0-or-later"

[dependencies]
rustc-hex = { version = "2.1.0", default-features = false }
serde = { version = "1.0.101", optional = true }
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false }
frame-support = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "frontier" }
frame-system = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "frontier" }
pallet-balances = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "frontier" }
pallet-timestamp = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "frontier" }
pallet-evm = { default-features = false, git = "https://github.com/paritytech/frontier", branch = "master" }
sp-runtime = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "frontier" }
sp-std = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "frontier" }
sp-io = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "frontier" }
fp-evm = { default-features = false, git = "https://github.com/paritytech/frontier", branch = "master" }
evm = { version = "0.25.0", features = ["with-codec"], default-features = false }
ethereum = { version = "0.7.1", default-features = false, features = ["with-codec"] }
ethereum-types = { version = "0.11", default-features = false }
rlp = { version = "0.5", default-features = false }
sha3 = { version = "0.8", default-features = false }
libsecp256k1 = { version = "0.3", default-features = false }
fp-consensus = { git = "https://github.com/paritytech/frontier", branch = "master", default-features = false }
fp-rpc = { git = "https://github.com/paritytech/frontier", branch = "master", default-features = false }
fp-storage = { git = "https://github.com/paritytech/frontier", branch = "master", default-features = false }

[dev-dependencies]
sp-core = { git = "https://github.com/paritytech/substrate.git", branch = "frontier" }

[features]
default = ["std"]
std = [
	"serde",
	"rustc-hex/std",
	"codec/std",
	"sp-runtime/std",
	"frame-support/std",
	"frame-system/std",
	"pallet-balances/std",
	"pallet-timestamp/std",
	"pallet-evm/std",
	"sp-io/std",
	"sp-std/std",
	"fp-evm/std",
	"ethereum/std",
	"ethereum-types/std",
	"rlp/std",
	"sha3/std",
	"libsecp256k1/std",
	"fp-consensus/std",
	"fp-rpc/std",
	"fp-storage/std",
	"evm/std",
]
