[package]
name = "pallet-evm-accounts"
version = "0.1.0"
authors = ["Thales Substrate <thales.network>"]
edition = "2018"
license = "GPL-3.0-or-later"

[dependencies]
serde = { version = "1.0.124", optional = true }
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false }
libsecp256k1 = { version = "0.3.4", default-features = false, features = ["hmac"] }
ethereum = { version = "0.7.1", default-features = false, features = ["with-codec"] }
ethereum-types = { version = "0.11", default-features = false }
sha3 = { version = "0.8", default-features = false }

frame-support = { git = "https://github.com/paritytech/substrate", branch = "frontier", default-features = false }
frame-system = { git = "https://github.com/paritytech/substrate", branch = "frontier", default-features = false }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "frontier", default-features = false }
sp-io = { git = "https://github.com/paritytech/substrate", branch = "frontier", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "frontier", default-features = false }
sp-std = { git = "https://github.com/paritytech/substrate", branch = "frontier", default-features = false }
pallet-timestamp = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "frontier" }

pallet-evm = {  default-features = false, git = "https://github.com/paritytech/frontier", branch = "master" }

primitives = { package = "thales-primitives", path = "../../primitives", default-features = false }
pallet-ethereum = { path = "../ethereum", default-features = false }

[dev-dependencies]
pallet-balances = { git = "https://github.com/paritytech/substrate", branch = "frontier" }

[features]
default = ["std"]
std = [
	"serde",
	"codec/std",
	"libsecp256k1/std",
	"sp-core/std",
	"sp-runtime/std",
	"sp-io/std",
	"sp-std/std",
	"frame-support/std",
	"frame-system/std",
	"ethereum/std",
	"ethereum-types/std",
	"sha3/std",
	"pallet-evm/std",
	"primitives/std",
	"pallet-timestamp/std",
	"pallet-ethereum/std",
]
