[package]
name = "thales-rpc-core-debug"
version = '0.1.0'
authors = ['Thales']
edition = '2018'
homepage = 'https://thales.network'
license = 'GPL-3.0-only'
repository = 'https://github.com/Thales-network/thales/'

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = { version = "0.3", features = ["compat"] }
ethereum-types = "0.11.0"
jsonrpc-core = "15.0.0"
jsonrpc-core-client = "14.0.3"
jsonrpc-derive = "14.0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sp-core = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
thales-rpc-primitives-debug = { path = "../../../primitives/rpc/debug" }
#evm = { version = "0.20.0", default-features = false, features = ["with-codec"] }
