[package]
name = "thales-rpc-core-trace"
version = '0.6.0'
authors = ['Thales']
edition = '2018'
homepage = 'https://thales.network'
license = 'GPL-3.0-only'
repository = 'https://github.com/Thales-network/thales/'

[dependencies]
ethereum-types = "0.11.0"
jsonrpc-core = "15.0.0"
jsonrpc-core-client = "14.0.3"
jsonrpc-derive = "14.0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = { version = "0.3.1", features = ["compat"] }
thales-rpc-primitives-debug = { path = "../../../primitives/rpc/debug" }