[package]
name = "thales-rpc-txpool"
version = '0.6.0'
authors = ['Thales']
edition = '2018'
homepage = 'https://thales.network'
license = 'GPL-3.0-only'
repository = 'https://github.com/Thales-network/thales/'

[dependencies]
sha3 = "0.8"
jsonrpc-core = "15.0.0"
ethereum-types = "0.11.0"
ethereum = { version = "0.7.1", default-features = false, features = ["with-codec"] }
thales-rpc-core-txpool = { path = "../../rpc-core/txpool" }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
sp-api = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
sp-io = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
sp-std = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
sp-blockchain = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
sp-transaction-pool = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
frame-system = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
serde = { version = "1.0", features = ["derive"] }

thales-rpc-primitives-txpool = { path = "../../../primitives/rpc/txpool" }
fc-rpc = { git = "https://github.com/purestake/frontier", branch = "notlesh-moonbeam-v0.7" }
