[package]
name = "thales-rpc-primitives-txpool"
version = '0.6.0'
authors = ['Thales']
edition = '2018'
homepage = 'https://thales.network'
license = 'GPL-3.0-only'
repository = 'https://github.com/Thales-network/thales/'

[dependencies]
ethereum = { version = "0.7.1", default-features = false, features = ["with-codec"] }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
sp-api = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
sp-io = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
sp-std = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }

[features]
default = ["std"]
std = [
	"sp-api/std",
	"sp-runtime/std",
	"sp-io/std",
	"sp-std/std",
	"ethereum/std",
]
